--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
-body {
-  background: url(images/pizza.jpg) no-repeat center center fixed;
+/*body {
+  background: url(images/pizza.jpeg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+}*/
