--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,54 @@
   -o-background-size: cover;
   background-size: cover;
 }*/
+
+
+/*
+.pizza-builder {width: 300px;
+    border: 25px solid rgba(0,255,0,0.77);
+    padding: 25px;
+    margin: 25px;
+}*/
+body{
+  font: italic normal bold 26px/normal "advent-pro", Helvetica, sans-serif;
+  background-color: black;
+  color: white;
+}
+
+#button{display: inline-block;
+-webkit-box-sizing: content-box;
+-moz-box-sizing: content-box;
+box-sizing: content-box;
+float: none;
+z-index: auto;
+width: auto;
+height: auto;
+position: static;
+cursor: pointer;
+opacity: 1;
+margin: 0;
+padding: 10px 20px;
+overflow: visible;
+border: 5px solid rgba(0,255,0,1);
+-webkit-border-radius: 200px;
+border-radius: 200px;
+font: italic normal bold 26px/normal "advent-pro", Helvetica, sans-serif;
+color: rgba(255,255,255,1);
+text-align: center;
+-o-text-overflow: clip;
+text-overflow: clip;
+word-spacing: -42px;
+background: rgba(153,0,255,1);
+-webkit-box-shadow: 5px 5px 8px 2px rgba(150,31,224,0) , 5px 5px 8px 2px rgba(0,0,0,0.4) , 2px 2px 2px 0 rgba(153,0,255,1) ;
+box-shadow: 5px 5px 8px 2px rgba(150,31,224,0) , 5px 5px 8px 2px rgba(0,0,0,0.4) , 2px 2px 2px 0 rgba(153,0,255,1) ;
+text-shadow: -1px -1px 0 rgba(15,73,168,0.66) ;
+-webkit-transition: none;
+-moz-transition: none;
+-o-transition: none;
+transition: none;
+-webkit-transform: none;
+transform: none;
+-webkit-transform-origin: 50% 50% 0;
+transform-origin: 50% 50% 0;
+center
+}
